tests/NormalTests/paczka1/fuzzy1/75591698.err
Error in line 10: rYZoMbP S562 7,2
Error in line 8: gpx1DZ S164 70,8
Error in line 23: Yhf2yuNPEbB A490 823,5
Error in line 17: gpx1DZ A490 67,2
Error in line 32: rYZoMbP A490 40,1
